@startuml
class Paleta {
x: int
y: int
width: int
heigh:int
color: tuple  
draw(display pantalla)
mover(up: boolean)
reseteo()
}

class Bola {
x: int
y: int
radio: int
x_vel: int
y_vel: int
color: tuple 
draw(pantalla: display)
mover()
reseteo()


}

class Juego {
draw(pantalla: display, paletas:lista, bola: Bola, Contador: int)
choque(bola: Bola, P_Izq: Paleta, P_Der: Paleta, P_Izq1:Paleta, P_Der1: Paleta,P_Izq2: Paleta, P_Der2: Paleta)
moverPaleta(keys: int, paletas:lista)
music(song: str)
}

Juego *-- Bola
Juego *-- Paleta
@enduml
